dataset1235/2025-2/2318198438/users/1240871306/executions/2601575092_146336312.log
== RUN (2025-09-01 02:52:17)
-- CODE: 
cada_guerreiro = moedas// guerreiros
informate = moedas % guerreiros
print("cada guerreiro recererá:", cada_guerreiro, "moedas")
print("o informante recebera:" , informate, "moedas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    cada_guerreiro = moedas// guerreiros
                     ^^^^^^
NameError: name 'moedas' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    cada_guerreiro = moedas// guerreiros
                     ^^^^^^
NameError: name 'moedas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 03:08:54)
-- CODE: 
moedas = 50
guerreiros = 3
cada_um = moedas // guerreiros
informate = moedas % guerreiros
print( moedas // guerreiros)
prim(moedas % guerreiros)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prim(moedas % guerreiros)
    ^^^^
NameError: name 'prim' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prim(moedas % guerreiros)
    ^^^^
NameError: name 'prim' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 03:01:29)
-- CODE: 
moedadas = 50
guerreiros = 3
cada_um = moedas // guerreiros
informate = moedas % guerreiros
print("cada guerreiro recererá:", cada_um , "moedas")
print("o informante receberá:" , informate, "moedas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cada_um = moedas // guerreiros
              ^^^^^^
NameError: name 'moedas' is not defined. Did you mean: 'moedadas'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cada_um = moedas // guerreiros
              ^^^^^^
NameError: name 'moedas' is not defined. Did you mean: 'moedadas'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 02:51:20)
-- CODE: 
cada_guerreiro = moedas// guerreiros
informate = moedas % guerreiros
print("cada guerreiro recererá:", cada_guerreiro, "moedas")
print("o informante recebera:" , informate, "moedas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    cada_guerreiro = moedas// guerreiros
                     ^^^^^^
NameError: name 'moedas' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    cada_guerreiro = moedas// guerreiros
                     ^^^^^^
NameError: name 'moedas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 02:59:29)
-- CODE: 
cada_um = moedas// guerreiros
informate = moedas % guerreiros
print("cada guerreiro recererá:", cada_um , "moedas")
print("o informante receberá:" , informate, "moedas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    cada_um = moedas// guerreiros
              ^^^^^^
NameError: name 'moedas' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    cada_um = moedas// guerreiros
              ^^^^^^
NameError: name 'moedas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 02:54:44)
-- CODE: 
cada_um = moedas// guerreiros
informate = moedas % guerreiros
print("cada guerreiro recererá:", cada_um , "moedas")
print("o informante receberá:" , informate, "moedas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    cada_um = moedas// guerreiros
              ^^^^^^
NameError: name 'moedas' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    cada_um = moedas// guerreiros
              ^^^^^^
NameError: name 'moedas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 03:02:44)
-- CODE: 
moedas = 50
guerreiros = 3
cada_um = moedas // guerreiros
informate = moedas % guerreiros
print("cada guerreiro recererá:", cada_um , "moedas")
print("o informante receberá:" , informate, "moedas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
o informante receberá: 2 moedas
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
o informante receberá: 2 moedas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 03:01:28)
-- CODE: 
moedadas = 50
guerreiros = 3
cada_um = moedas // guerreiros
informate = moedas % guerreiros
print("cada guerreiro recererá:", cada_um , "moedas")
print("o informante receberá:" , informate, "moedas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cada_um = moedas // guerreiros
              ^^^^^^
NameError: name 'moedas' is not defined. Did you mean: 'moedadas'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cada_um = moedas // guerreiros
              ^^^^^^
NameError: name 'moedas' is not defined. Did you mean: 'moedadas'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 02:59:30)
-- CODE: 
cada_um = moedas// guerreiros
informate = moedas % guerreiros
print("cada guerreiro recererá:", cada_um , "moedas")
print("o informante receberá:" , informate, "moedas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    cada_um = moedas// guerreiros
              ^^^^^^
NameError: name 'moedas' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    cada_um = moedas// guerreiros
              ^^^^^^
NameError: name 'moedas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 03:02:48)
-- CODE: 
moedas = 50
guerreiros = 3
cada_um = moedas // guerreiros
informate = moedas % guerreiros
print("cada guerreiro recererá:", cada_um , "moedas")
print("o informante receberá:" , informate, "moedas")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
o informante receberá: 2 moedas
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
o informante receberá: 2 moedas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 02:54:45)
-- CODE: 
cada_um = moedas// guerreiros
informate = moedas % guerreiros
print("cada guerreiro recererá:", cada_um , "moedas")
print("o informante receberá:" , informate, "moedas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    cada_um = moedas// guerreiros
              ^^^^^^
NameError: name 'moedas' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    cada_um = moedas// guerreiros
              ^^^^^^
NameError: name 'moedas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
